--- a/docs/layout.css
+++ b/docs/layout.css
@@ -17,15 +17,22 @@ body {
 /* Left column */
 .leftcolumn {
   float: left;
-  width: 75%;
+  width: 43%;
   color: #222222;
+  background: #f5f5f5;
+  text-align: justify;
+  padding: 50px;
+  padding-top: 10px;
+  padding-left: 20px;
 }
 
 /* Right column */
 .rightcolumn {
   float: left;
   width: 25%;
-  padding-left: 20px;
+  background: #222222;
+  padding-left: 100px;
+  color: #adf7af;
 }
 
 /* Fake image */
