--- a/docs/main.css
+++ b/docs/main.css
@@ -93,18 +93,15 @@ a:active {
   color: #b518b2;
 }
 
-.thumb-wrap {
-  position: relative;
-  padding-bottom: 75%; /* задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
-  height: 0;
-  overflow: hidden;
+.video-container {
+    position: relative;
+    padding-bottom: 75%; /* 4:3 */
+    height: 0;
 }
-.thumb-wrap iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-width: 0;
-  outline-width: 0;
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
